Windows subscribe info

--- a/src/subscribe.html
+++ b/src/subscribe.html
@@ -4,9 +4,12 @@ description: How to subscribe to a podcast
 section: subscribe
 customsvg: os
 ---
+<h1>Feed</h1>
+<p>http://tto.koser.us/feed.rss</p>
+<p>If this is your first podcast, follow the <b>Subscribe</b> directions below.</p>
 
 <h1>Subscribe</h1>
-<p>The easiest way to listen to a podcast is to subscribe. A good podcast app will automatically download and alert you when a new episode is available. Here’s how:</p>
+<p>The easiest way to listen to a podcast is to subscribe. A good podcast app will automatically download and alert you when a new episode is available. Click on your platform to find out how:</p>
 
 <h2 id="tab1" class="tab accordion" aria-controls="panel1" role="tab" tabindex="0">
     <svg class="icon icon-os icon-android"><use xlink:href="#icon-android"></use></svg> Android
@@ -15,11 +18,11 @@ customsvg: os
     <ol>
         <li>Download <a href="https://play.google.com/store/apps/details?id=com.bambuna.podcastaddict&hl=en">Podcast Addict</a>, a free podcast app.
 
-        <li>Tap the <b>Add new Podcast</b> button.
+        <li>Tap the <kbd><samp>Add new Podcast</samp></kbd> button.
         <br>
         <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-01.png">
 
-        <li>Tap the <b>Search Engine</b> tile.
+        <li>Tap the <kbd><samp>Search Engine</samp></kbd> tile.
         <br>
         <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-02.png">
 
@@ -27,16 +30,16 @@ customsvg: os
         <br>
         <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-03.png">
 
-        <li>Tap the <b>Subscribe</b> button.
+        <li>Tap the <kbd><samp>Subscribe</samp></kbd> button.
         <br>
         <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-04.png">
 
-        <li>Tap the menu icon. Then tap <b>Update</b>, <b>Automatic refresh</b>, <b>Enable Podcasts automatic refresh</b>.
+        <li>Tap the menu icon. Then tap <kbd><samp>Update</samp></kbd>, <kbd><samp>Automatic refresh</samp></kbd>, <kbd><samp>Enable Podcasts automatic refresh</samp></kbd>.
         <br>
         <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-05.png">
         <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-06.png">
 
-        <li>Tap the <b>back button</b> to go back to Settings. Then tap <b>Download</b>, <b>Automatic download</b>. Now, whenever we release a new episode, it will automatically download to your phone.
+        <li>Tap the <b>back button</b> to go back to Settings. Then tap <kbd><samp>Download</samp></kbd>, <kbd><samp>Automatic download</samp></kbd>. Now, whenever we release a new episode, it will automatically download to your phone.
         <br>
         <img src="http://ttocdn.koser.us/img/subscribe-android-podcast-addict-07.png">
 
@@ -66,7 +69,24 @@ customsvg: os
 <div id="panel3" class="panel accordion" aria-labeledby="tab3" role="tabpanel">
     <ol>
         <li>Download and install <a href="https://www.apple.com/itunes/download/">iTunes</a>.
-    	<li>
-        <li>Double-click an episode to play.
-        <li>To check for new episodes, open iTunes.
+    	
+        <li>Open iTunes and click <kbd><samp>File</samp></kbd>, then <kbd><samp>Subscribe to Podcast</samp></kbd>.
+        <br>
+        <img src="http://ttocdn.koser.us/img/subscribe-windows-itunes-1.png">
+
+        <li>Enter our URL: <b>http://tto.koser.us/feed.rss</b> and click <kbd><samp>OK</samp></kbd>.
+        <br>
+        <img src="http://ttocdn.koser.us/img/subscribe-windows-itunes-2.png">
+
+        <li>You do not need to sync, but you should select <kbd><samp>Automatically download new episodes for your subscriptions</samp></kbd>, then click <kbd><samp>Continue</samp></kbd>.
+        <br>
+        <img src="http://ttocdn.koser.us/img/subscribe-windows-itunes-3.png">
+
+        <li>Listen to an episode by double-clicking on it.
+        <br>
+        <img src="http://ttocdn.koser.us/img/subscribe-windows-itunes-4.png">    
+        
+        <li>To listen to our new episode every two weeks, just open iTunes. Any new episodes will be automatically downloaded.
+
+        <li>Enjoy the podcast!
 </div>
