--- a/src/subscribe.html
+++ b/src/subscribe.html
@@ -60,7 +60,35 @@ customsvg: os
     <svg class="icon icon-os icon-appleinc"><use xlink:href="#icon-appleinc"></use></svg> iPhone or iPad
 </h2>
 <div id="panel2" class="panel accordion" aria-labeledby="tab2" role="tabpanel">
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+    <ol>
+        <li>Open the <b>Podcasts</b> app on your iPhone or iPad.
+        <br>
+        <img src="http://ttocdn.koser.us/img/subscribe-apple-1.png">
+
+        <li>Tap the <kbd><samp>Search</samp></kbd>> button in the bottom menu.
+        <br>
+        <img src="http://ttocdn.koser.us/img/subscribe-apple-2.png">
+
+        <li>Search for <b>Ten to One</b>.
+        <br>
+        <img src="http://ttocdn.koser.us/img/subscribe-apple-3.png">
+
+        <li>Find and tap on the Ten to One podcast (you might have to scroll down).
+        <br>
+        <img src="http://ttocdn.koser.us/img/subscribe-apple-4.png">
+
+        <li>Tap the <kbd><samp>Subscribe</samp></kbd> button.
+        <br>
+        <img src="http://ttocdn.koser.us/img/subscribe-apple-5.png">
+
+        <li>Tap the <kbd><samp>My Keyboard</samp></kbd> button. Then tap on any episode to download and listen.
+        <br>
+        <img src="http://ttocdn.koser.us/img/subscribe-apple-6.png">
+
+        <li>A new episode will be downloaded every two weeks.
+
+        <li>Enjoy the podcast!
+    </ol>
 </div>
 
 <h2 id="tab3" class="tab accordion" aria-controls="panel3" role="tab" tabindex="-1">
@@ -89,4 +117,5 @@ customsvg: os
         <li>To listen to our new episode every two weeks, just open iTunes. Any new episodes will be automatically downloaded.
 
         <li>Enjoy the podcast!
+    </ol>
 </div>
